--- a/.gitignore
+++ b/.gitignore
@@ -40,10 +40,8 @@ debug
 # python
 __pycache__
 
-# utilities
-util/assembler/asm
-util/autowire/bd
-util/*/out
+# object file
+*.o
 
 # PyCharm
 .idea/
