--- a/src/Makefile
+++ b/src/Makefile
@@ -1,10 +1,15 @@
 .PHONY: all clean
 
+ASM_FILES := $(patsubst %.s, %.o, $(wildcard *.s))
+C_FILES   := $(patsubst %.c, %.o, $(wildcard *.c))
+
 %.o: %.c
 	$(CC) -o $@ $^
 
-all:
-	#
+%.o: %.s
+	$(AS) -o $@ $^
+
+all: $(ASM_FILES) $(C_FILES)
 
 clean:
 	-rm -f *.o
